[gd_scene load_steps=48 format=3 uid="uid://b5hpfc2nui1ii"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ypr07"]
[ext_resource type="Texture2D" uid="uid://jc7q5nt3h0v0" path="res://assets/Wizard/idle_left.png" id="2_4t542"]
[ext_resource type="Texture2D" uid="uid://cu0xacvxi88hk" path="res://assets/Wizard/Idle_right.png" id="2_ut635"]
[ext_resource type="Texture2D" uid="uid://duv01plrovhoe" path="res://assets/Wizard/Run.png" id="3_2rwgg"]
[ext_resource type="Texture2D" uid="uid://bb5vhpcfmoc86" path="res://assets/Wizard/run_left.png" id="3_42rit"]
[ext_resource type="Texture2D" uid="uid://c7dawsuefa8ih" path="res://assets/Wizard/Walk.png" id="4_vnigd"]
[ext_resource type="PackedScene" uid="uid://c56k12eb0a5pe" path="res://scenes/bow.tscn" id="6_7y242"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xrhyc"]
atlas = ExtResource("2_ut635")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_apg3i"]
atlas = ExtResource("2_ut635")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n688"]
atlas = ExtResource("2_ut635")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f8ol"]
atlas = ExtResource("2_ut635")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgdeb"]
atlas = ExtResource("2_ut635")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kegtv"]
atlas = ExtResource("2_ut635")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6nnd"]
atlas = ExtResource("2_4t542")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_81bog"]
atlas = ExtResource("2_4t542")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bafg6"]
atlas = ExtResource("2_4t542")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nuqx"]
atlas = ExtResource("2_4t542")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvbgg"]
atlas = ExtResource("2_4t542")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dn1w"]
atlas = ExtResource("2_4t542")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnvpv"]
atlas = ExtResource("3_2rwgg")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wom4e"]
atlas = ExtResource("3_2rwgg")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpek3"]
atlas = ExtResource("3_2rwgg")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v11h1"]
atlas = ExtResource("3_2rwgg")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnhgu"]
atlas = ExtResource("3_2rwgg")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1jgm"]
atlas = ExtResource("3_2rwgg")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmg5a"]
atlas = ExtResource("3_2rwgg")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i8op"]
atlas = ExtResource("3_2rwgg")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_if433"]
atlas = ExtResource("3_42rit")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8a61"]
atlas = ExtResource("3_42rit")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rryao"]
atlas = ExtResource("3_42rit")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkc1n"]
atlas = ExtResource("3_42rit")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m54ba"]
atlas = ExtResource("3_42rit")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_naf2p"]
atlas = ExtResource("3_42rit")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmd85"]
atlas = ExtResource("3_42rit")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d26p3"]
atlas = ExtResource("3_42rit")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkm77"]
atlas = ExtResource("4_vnigd")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd6b6"]
atlas = ExtResource("4_vnigd")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycool"]
atlas = ExtResource("4_vnigd")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oj3l"]
atlas = ExtResource("4_vnigd")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cxbn"]
atlas = ExtResource("4_vnigd")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2goj7"]
atlas = ExtResource("4_vnigd")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqayu"]
atlas = ExtResource("4_vnigd")
region = Rect2(768, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_q63hu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrhyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apg3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n688")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f8ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgdeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kegtv")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6nnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81bog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bafg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nuqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvbgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dn1w")
}],
"loop": true,
"name": &"idle_left",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnvpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wom4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpek3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v11h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnhgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1jgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmg5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i8op")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_if433")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8a61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rryao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkc1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m54ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naf2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmd85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d26p3")
}],
"loop": true,
"name": &"run_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkm77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd6b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycool")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oj3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cxbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2goj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqayu")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qltnn"]
radius = 17.0294

[sub_resource type="CircleShape2D" id="CircleShape2D_he7is"]
radius = 11.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6inxn"]
bg_color = Color(0.136826, 0.136826, 0.136826, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing_size = 0.21

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bliu8"]
bg_color = Color(0.272685, 0.798977, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing_size = 0.21

[node name="Player" type="CharacterBody2D"]
<<<<<<< HEAD
collision_layer = 64
collision_mask = 129
=======
collision_layer = 0
>>>>>>> 306a77f3d74a621e7447a1d32db8e8bad6d7d912
motion_mode = 1
script = ExtResource("1_ypr07")
metadata/Health = 35.0
metadata/Damage = 3.0
metadata/Speed = 0.0
metadata/FireRate = 1.0

[node name="Wizard" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_q63hu")
animation = &"walk"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 14)
shape = SubResource("CircleShape2D_qltnn")

[node name="Bow" parent="." instance=ExtResource("6_7y242")]
position = Vector2(0, 17)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 17)
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, 4)
shape = SubResource("CircleShape2D_he7is")
debug_color = Color(0.786099, 0.177429, 0.285062, 0.42)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
texture_filter = 1
offset_left = -18.0
offset_top = -9.0
offset_right = 18.0
offset_bottom = -6.0
theme_override_styles/background = SubResource("StyleBoxFlat_6inxn")
theme_override_styles/fill = SubResource("StyleBoxFlat_bliu8")
value = 100.0
show_percentage = false

[connection signal="health_depleted" from="." to="." method="_on_health_depleted"]
